--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -19,7 +19,7 @@
       
          <li >
           <a href="/users/post">
-            <i class="tim-icons icon-shape-star"></i>
+            <i class="tim-icons icon-bulb-63"></i>
             <p>Share Advice</p>
           </a>
         </li>
@@ -29,11 +29,11 @@
             <p>The Healthy Bot</p>
           </a>
         </li>
+        
         <li>
-
-          <a href="/users/recipes">
+          <a href="/users/view">
             <i class="tim-icons icon-paper"></i>
-            <p>Search for Recipes</p>
+            <p>View Appointments</p>
           </a>
         </li>
         <% if(user.type ==="patient") { %>
@@ -45,15 +45,9 @@
         </li>
         <% } %>
         <li>
-          <a href="/users/tracker">
-            <i class="tim-icons icon-user-run"></i>
-            <p>Fitness Tracker</p>
-          </a>
-        </li>
-        <li>
-          <a href="/users/leaderboard">
-            <i class="tim-icons icon-trophy"></i>
-            <p>Leaderboard</p>
+          <a href="/users/join">
+            <i class="tim-icons icon-calendar-60"></i>
+            <p>Join Appointment</p>
           </a>
         </li>
         <li>
