--- a/views/join.ejs
+++ b/views/join.ejs
@@ -13,23 +13,19 @@
         <div class="row">
         
           <div class="col-md-12">
-            <h3>Share something!</h3>
+            <h3>Join your appointment!</h3>
             <div class="card">
               <div class="card-body">
-                <form method="post" action="/users/post">
+                <form action="/chat" id="appointment-form">
+                <% if(user.type==="doctor") {%>
+                    <div class="form-group">
+                    <label for="exampleInputPassword1">Enter the meeting link here:</label>
+                    <input type="text" class="form-control" placeholder="Enter the google/zoom link here" name="link" required/>
+                    </div>
+                    <% } %>
                   <div class="form-group">
-                    <label for="exampleFormControlSelect1">Post type</label>
-                    <select class="form-control" name="type" id="exampleFormControlSelect1">
-                      <option>Health Tip</option>
-                      <option>Fitness Tip</option>
-                      <option>Home Remedies</option>
-                      <option>First Aid Advice</option>
-                      <option>Other</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputPassword1">Post</label>
-                    <textarea name="title" type="text" class="form-control" id="exampleInputPassword1" placeholder="Type something here!" rows="10" required></textarea>
+                    <label for="exampleInputPassword1">Enter the Session Code Here:</label>
+                    <input type="text" class="form-control" placeholder="Enter the session code here" name="code" required/>
                   </div>
                   <input type="hidden" value="<%- user.name %>" name="username"/>
                   <input type="hidden" value="<%- user._id %>" name="userid"/>
