--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,61 +9,70 @@
     <div class="main-panel">
         <%- include('partials/navbar') %>
       <div class="content">
+        <h2>Your Appointments</h2>
         <div class="row">
-         
-          <div class="col-md-8">
-            <% for (let i=0; i<post.length; i++){%>
-            <div class="card card-nav-tabs">
-              <div class="card-header">
-                <h4 class="card-title"><a href="/users/profile/<%- post[i].userid %>"><%- post[i].username %></a></h4>
-              <h6 class="card-subtitle mb-2 text-muted">On <%- post[i].date.toDateString() %> at <%- post[i].date.getUTCHours() %>:<%- post[i].date.getUTCMinutes() %></h6>
-              </div>
-              
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                  <p><%- post[i].title %></p>
-                  <span class="badge badge-primary"><%- post[i].type %></span>
-                </blockquote>
-              </div>
-            </div>
-            <% } %>
-          </div>
-         
+           
+            <br>
+            <% if (user.type==="doctor"){ %>
+          <% for (let i=0; i<appointments.length; i++){%>
           <div class="col-md-4">
-            <div class="card card-user">
+            <div class="card" >
               <div class="card-body">
-                <p class="card-text">
-                  <div class="author">
-                    <div class="block block-one"></div>
-                    <div class="block block-two"></div>
-                    <div class="block block-three"></div>
-                    <div class="block block-four"></div>
-                    <a href="javascript:void(0)">
-                      <img class="avatar" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" alt="...">
-                      <h5 class="title">User since <%-user.createdAt.getFullYear() %></h5>
-                    </a>
-                    <p class="description" class="text-center">
-                      <%- user.name %>
-                      <br>
-                      <% if(user.type==="doctor"){ %>
-                      <span class="badge badge-pill badge-primary">Doctor</span>
-                      <% } else { %>
-                      <span class="badge badge-pill badge-primary">General User</span>
-                      <% } %>
-                    </p>
-                  </div>
-                </p>
-                <div class="card-description text-center">
-                  <%- user.bio %>
-                  <br>
-                  <a href="mailto:<%- user.email %>"class="btn btn-primary btn-fab btn-icon btn-round">
-                    <i class="tim-icons icon-chat-33"></i>
-                  </a>
+                <h4 class="card-title">Patient Name: <a href="/users/profile/<%- appointments[i].userid %>"><%- appointments[i].username %></a></h4>
+                <p>Date: <%- appointments[i].date %></p>
+                <p>Time: <%- appointments[i].time %></p>
+                <% if (appointments[i].status==="Pending"){ %>
+                    <br>
+                <div class="container">
+                <div class="row">
+                <div class="col-md-6">
+                <form action="/users/view" method="POST">
+                  <input type="hidden" name="status" value="Confirmed">
+                  <input type="hidden" name="id" value="<%- appointments[i]._id %>">
+                  <button type="submit" style="width:80%"  class="btn btn-success btn-sm ">Confirm</button>
+                </form>
                 </div>
+                <div class="col-md-6">
+                <form action="/users/view" method="POST">
+                    <input type="hidden" name="status" value="Rejected">
+                    <input type="hidden" name="id" value="<%- appointments[i]._id %>">
+                   
+                    <button type="submit" style="width:80%" class="btn btn-danger btn-sm"> Reject</button>
+                  </form>
+                </div>
+                </div>
+                </div>
+                <% } else if (appointments[i].status==="Rejected"){  %>
+                    <p>Status: <%- appointments[i].status %></p>
+                    <br>
+                <% } else { %>
+                    <p>Status: <%- appointments[i].status %></p>
+                    <p>Session Code: <span class="badge badge-pill badge-info"><%- appointments[i].code %></span></p>
+                    <% } %>
               </div>
-             
             </div>
           </div>
+          <% } %>
+          <% } else {%>
+            <% for (let i=0; i<appointments.length; i++){%>
+                <div class="col-md-4">
+                  <div class="card" >
+                    <div class="card-body">
+                      <h4 class="card-title">Doctor Name: <a href="/users/profile/<%- appointments[i].userid %>"><%- appointments[i].doctorname %></a></h4>
+                      <p>Date: <%- appointments[i].date %></p>
+                      <p>Time: <%- appointments[i].time %></p>
+                      <p>Status: <%- appointments[i].status %></p>
+                      <% if (appointments[i].status==="Confirmed"){ %>
+                        <p>Session Code: <span class="badge badge-pill badge-info"><%- appointments[i].code %></span></p>
+                      <% } else {%>
+                        <br>
+                    
+                      <% } %>
+                    </div>
+                  </div>
+                </div>
+                <% } %>
+            <% } %>
         </div>
       </div>
       <%- include('partials/footer') %>
