--- a/views/registerdoctor.ejs
+++ b/views/registerdoctor.ejs
@@ -38,6 +38,14 @@
                     <input type="password" class="form-control" name="cpassword" id="exampleInputPassword1" placeholder="Confirm Password" required/>
                   </div>
                   <div class="form-group">
+                    <label for="exampleInputPassword1">Iframe Src Link</label>
+                    <input type="text" class="form-control" name="iframe" id="exampleInputPassword1" placeholder="https://calendar.google.com/calendar/embed?src=bo162innfpcimrt08vdsvdsvsd65c8lr4%40group.calendar.google.com&ctz=Asia%2FKolkata" required/>
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputPassword1">Sharable Link</label>
+                    <input type="text" class="form-control" name="sharableLink" id="exampleInputPassword1" placeholder="https://calendar.google.com/calendar/u/0?cid=Ym8xNjJpbm5mcGNpbfdfvvsdvweceDhtaDY1YzhscjRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ" required/>
+                  </div>
+                  <div class="form-group">
                     <label for="exampleInputPassword1">Bio</label>
                     <textarea type="text" style="
                     border: 1px solid #2b3553;
