--- a/views/book.ejs
+++ b/views/book.ejs
@@ -16,14 +16,38 @@
             <h3>Book an appointment!</h3>
             <div class="card">
               <div class="card-body">
+                <form method="post" action="/users/book1">
+                  <div class="form-group">
+                    <label for="exampleFormControlSelect1">Doctor</label>
+                    <select class="form-control" name="doctor" id="exampleFormControlSelect1" >
+                    <% for (let i=0; i< doctors.length; i++) {
+                      if(doctors[i]._id === doctor._id){ %>
+                        <option value="<%- doctors[i]._id %>" selected="selected"><%- doctors[i].name %></option>
+                     <% } else { %>
+                      <option value="<%- doctors[i]._id %>"><%- doctors[i].name %></option>
+                      <% }} %>
+                    </select>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
+            </div>
+            <h3>Appointment Calander for Dr <%- doctor.name %></h3>
+            <iframe src="<%- iframe %>" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+            <br>
+            <br>
+            <div class="card">
+              <div class="card-body">
                 <form method="post" action="/users/book">
                   <div class="form-group">
                     <label for="exampleFormControlSelect1">Doctor</label>
                     <select class="form-control" name="doctor" id="exampleFormControlSelect1">
                     <% for (let i=0; i< doctors.length; i++) { %>
-                      <option value="<%- doctors[i]._id %>"><%- doctors[i].name %></option>
+                      <option value="<%- doctors[i]._id %>"><%- doctors[i].name %>
+                      <br>
+                      </option>
                       <% } %>
                     </select>
+                    
                   </div>
                   <div class="form-group">
                     <label  for="exampleInputPassword1">Date</label>
@@ -61,8 +85,8 @@
   <script src="../assets/js/plugins/bootstrap-notify.js"></script>
   <script src="../assets/demo/demo.js"></script>
   <script>
-      $(document).ready(function() {
-    $("#datepicker").datepicker({ startDate:Date.now() });
+     $(document).ready(function() {
+    $("#datepicker").datepicker({ startDate:'+0d' });
 });
   </script>
   <script>
@@ -191,6 +215,10 @@
         application: "black-dashboard-free"
       });
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" rel="stylesheet"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"></script>
+  
 </body>
 
 </html>
