--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,4 +15,5 @@
     <link href="/assets/css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href="/assets/demo/demo.css" rel="stylesheet" />
+    <script src="ejs.min.js"></script>
 </head>
