--- a/views/registerdoctor.ejs
+++ b/views/registerdoctor.ejs
@@ -46,6 +46,10 @@
                     <input type="text" class="form-control" name="sharableLink" id="exampleInputPassword1" placeholder="https://calendar.google.com/calendar/u/0?cid=Ym8xNjJpbm5mcGNpbfdfvvsdvweceDhtaDY1YzhscjRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ" required/>
                   </div>
                   <div class="form-group">
+                    <label for="exampleInputPassword1">Practice Registration Number</label>
+                    <input type="text" class="form-control" name="registration" id="exampleInputPassword1" placeholder="eg 1000" required/>
+                  </div>
+                  <div class="form-group">
                     <label for="exampleInputPassword1">Bio</label>
                     <textarea type="text" style="
                     border: 1px solid #2b3553;
