--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,8 +69,8 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="/registerDoctor" class="appointment-btn scrollto"><span class="d-none d-md-inline">Sign Up</span></a>
-      <a href="/registerDoctor" class="appointment-btn scrollto"><span class="d-none d-md-inline">Log In</span></a>
+      <a href="/register" class="appointment-btn scrollto"><span class="d-none d-md-inline">Sign Up</span></a>
+      <a href="/login" class="appointment-btn scrollto"><span class="d-none d-md-inline">Log In</span></a>
       <a href="/registerDoctor" class="appointment-btn scrollto"><span class="d-none d-md-inline"></span> Doctors Check In</a>
 
     </div>
