feat: Added bot

--- a/views/botto.ejs
+++ b/views/botto.ejs
@@ -10,12 +10,12 @@
     <div class="main-panel">
         <%- include('partials/navbar') %>
       <div class="content">
-        <!-- <iframe
+        <iframe
             allow="microphone;"
             width="100%"
             height="530px"
             src="https://console.dialogflow.com/api-client/demo/embedded/6ca4d5fe-66c2-452b-bd1f-50a1f510b93f">
-        </iframe> -->
+        </iframe>
       </div>
       <%- include('partials/footer') %>
     </div>
