--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,7 @@
       <div class="copyright">
         ©
         2021 made with <i class="tim-icons icon-heart-2"></i> by
-        <a href="https://vrushtimody.me">Vrushti Mody</a> and <a href= "https://rohanpoojari.netlify.app">Rohan Poojari</a> for better healthcare.
+        <a href="https://vrushtimody.me">Vrushti Mody</a> , <a href= "https://rohanpoojari.netlify.app">Rohan Poojari</a> and <a href="https://palashanjania.netlify.app/">Palash Anjania</a> for better healthcare.
       </div>
     </div>
   </footer>
